[gd_scene load_steps=44 format=3 uid="uid://bhxk4wsnsy0qn"]

[ext_resource type="Theme" uid="uid://c7hfbhu8whrfq" path="res://Asset/Theme/scroll.tres" id="1_aam76"]
[ext_resource type="Script" path="res://Script/Game/main.gd" id="1_upif0"]
[ext_resource type="Texture2D" uid="uid://cwe7l0bmu7h5y" path="res://Asset/img/Thing/coin.png" id="2_h2jhc"]
[ext_resource type="Shader" path="res://Shader/Black.gdshader" id="3_iuwld"]
[ext_resource type="Script" path="res://Script/Game/OnClick.gd" id="4_cxtmy"]
[ext_resource type="AudioStream" uid="uid://chvh6hkix1hiy" path="res://Asset/Music/Background.wav" id="4_wg5m3"]
[ext_resource type="Script" path="res://Script/UI/Chart.gd" id="5_qev3x"]
[ext_resource type="Script" path="res://Script/Store.gd" id="6_ddr0y"]
[ext_resource type="AudioStream" uid="uid://7jnwaoc2stwa" path="res://Asset/FX/click3.mp3" id="6_hcokt"]
[ext_resource type="AudioStream" uid="uid://c836ky7ts162h" path="res://Asset/FX/click4.mp3" id="6_j6mmv"]
[ext_resource type="AudioStream" uid="uid://lkgxynqrx78n" path="res://Asset/FX/Coin01.mp3" id="6_k5iwr"]
[ext_resource type="Texture2D" uid="uid://b5xpgvon5gqwe" path="res://Asset/UI/button/HomePress.png" id="6_srdpu"]
[ext_resource type="AudioStream" uid="uid://bi4ycgwnklptb" path="res://Asset/FX/click2.mp3" id="7_ed87f"]
[ext_resource type="Texture2D" uid="uid://ctbhjhvcmi0u8" path="res://Asset/UI/button/StoreNormal.png" id="7_uu3h4"]
[ext_resource type="Texture2D" uid="uid://bmlvrdixoghhj" path="res://Asset/UI/button/HomeNormal.png" id="8_ksec3"]
[ext_resource type="Texture2D" uid="uid://ctvvw6p72gid4" path="res://Asset/UI/button/ChartNormal.png" id="8_th8r4"]
[ext_resource type="Texture2D" uid="uid://veintokpq0be" path="res://Asset/UI/button/ChartPress.png" id="9_7x72q"]
[ext_resource type="Texture2D" uid="uid://cqkymhjgh5r3i" path="res://Asset/UI/button/SettingNormal.png" id="9_yymeo"]
[ext_resource type="AudioStream" uid="uid://brkvjofk18skk" path="res://Asset/FX/click5.mp3" id="10_xienw"]
[ext_resource type="AudioStream" uid="uid://dfuur2wvswk41" path="res://Asset/FX/click6.mp3" id="11_6764h"]
[ext_resource type="Texture2D" uid="uid://j8ho3l3g0uah" path="res://Asset/UI/button/StorePress.png" id="11_rkjke"]
[ext_resource type="AudioStream" uid="uid://cji32vjh3efmr" path="res://Asset/FX/click7.mp3" id="12_oc1jt"]
[ext_resource type="Texture2D" uid="uid://bvmgddnnen0yf" path="res://Asset/UI/button/SettingPress.png" id="15_g8h5d"]
[ext_resource type="Texture2D" uid="uid://ck8jp7knyfh2h" path="res://Asset/UI/BlackGround.png" id="17_ddfjo"]
[ext_resource type="PackedScene" uid="uid://djuoyeu1igube" path="res://Scence/UI/title.tscn" id="17_xb6ny"]
[ext_resource type="Texture2D" uid="uid://biblror4s3kau" path="res://Asset/UI/StorePanel.png" id="19_2x3k2"]
[ext_resource type="Script" path="res://Script/UI/My.gd" id="19_g63aj"]
[ext_resource type="Texture2D" uid="uid://cmv3det1pd1i1" path="res://Asset/UI/TitleLine.png" id="20_00yt8"]
[ext_resource type="FontFile" uid="uid://rery3p2p3u0s" path="res://Asset/Font/DreamSource/DreamHanSans-W23.ttc" id="20_2plv4"]
[ext_resource type="Texture2D" uid="uid://dnh8xc4eneo00" path="res://Asset/UI/StoreBar.png" id="20_a6xjj"]
[ext_resource type="Texture2D" uid="uid://jkbq2d37t1hd" path="res://Asset/img/Background/texture.jpg" id="23_pevqq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5pjga"]
shader = ExtResource("3_iuwld")
shader_parameter/threshold = 0.1

[sub_resource type="ButtonGroup" id="ButtonGroup_6br4g"]

[sub_resource type="ButtonGroup" id="ButtonGroup_ffqeo"]

[sub_resource type="Animation" id="Animation_8qmcq"]
resource_name = "Move"
length = 20.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10, 19.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-27, -56), Vector2(-915, -56), Vector2(-27, -56)]
}

[sub_resource type="Animation" id="Animation_pvmmd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-27, -56)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mtlui"]
_data = {
"Move": SubResource("Animation_8qmcq"),
"RESET": SubResource("Animation_pvmmd")
}

[sub_resource type="Animation" id="Animation_hgsq7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Node2D/Mogu:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ben8r"]
resource_name = "Round"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Node2D/Mogu:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5, 10),
"transitions": PackedFloat32Array(1, 0.81225, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.097, 1.097), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wjohf"]
_data = {
"RESET": SubResource("Animation_hgsq7"),
"Round": SubResource("Animation_ben8r")
}

[sub_resource type="Animation" id="Animation_jfs0u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/Mogu:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_kacb0"]
resource_name = "on_click"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/Mogu:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 0.8), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fdc2b"]
_data = {
"RESET": SubResource("Animation_jfs0u"),
"on_click": SubResource("Animation_kacb0")
}

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_aam76")
script = ExtResource("1_upif0")

[node name="Node2D" type="Marker2D" parent="."]
position = Vector2(540, 897)

[node name="Mogu" type="Sprite2D" parent="Node2D"]
material = SubResource("ShaderMaterial_5pjga")
rotation = 6.28319
texture = ExtResource("2_h2jhc")

[node name="Control" type="Control" parent="Node2D/Mogu"]
layout_mode = 3
anchor_left = 0.508
anchor_top = 0.5
anchor_right = 0.508
anchor_bottom = 0.5
offset_left = -1000.62
offset_top = -1003.86
offset_right = -23.621
offset_bottom = -26.857
script = ExtResource("4_cxtmy")

[node name="audio1" type="AudioStreamPlayer" parent="Node2D/Mogu"]
stream = ExtResource("6_k5iwr")
pitch_scale = 1.43

[node name="audio2" type="AudioStreamPlayer" parent="Node2D/Mogu"]
stream = ExtResource("7_ed87f")
pitch_scale = 1.43

[node name="audio3" type="AudioStreamPlayer" parent="Node2D/Mogu"]
stream = ExtResource("6_hcokt")
pitch_scale = 1.43

[node name="audio4" type="AudioStreamPlayer" parent="Node2D/Mogu"]
stream = ExtResource("6_j6mmv")
pitch_scale = 1.43

[node name="audio5" type="AudioStreamPlayer" parent="Node2D/Mogu"]
stream = ExtResource("10_xienw")
pitch_scale = 1.43

[node name="audio6" type="AudioStreamPlayer" parent="Node2D/Mogu"]
stream = ExtResource("11_6764h")
pitch_scale = 1.43

[node name="audio7" type="AudioStreamPlayer" parent="Node2D/Mogu"]
stream = ExtResource("12_oc1jt")
pitch_scale = 1.43

[node name="UI" type="CanvasLayer" parent="."]

[node name="ToolBar" type="TextureRect" parent="UI"]
custom_minimum_size = Vector2(1080, 118)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -540.0
offset_top = -180.0
offset_right = 540.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("17_ddfjo")
expand_mode = 1
stretch_mode = 2
flip_v = true

[node name="HBox" type="HBoxContainer" parent="UI/ToolBar"]
custom_minimum_size = Vector2(1080, 118)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -540.0
offset_top = -123.0
offset_right = 540.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = -4
alignment = 1

[node name="Home" type="TextureButton" parent="UI/ToolBar/HBox"]
custom_minimum_size = Vector2(0, 118)
layout_mode = 2
theme = ExtResource("1_aam76")
toggle_mode = true
button_pressed = true
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_6br4g")
texture_normal = ExtResource("8_ksec3")
texture_pressed = ExtResource("6_srdpu")

[node name="Store" type="TextureButton" parent="UI/ToolBar/HBox"]
custom_minimum_size = Vector2(0, 118)
layout_mode = 2
theme = ExtResource("1_aam76")
toggle_mode = true
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_6br4g")
texture_normal = ExtResource("7_uu3h4")
texture_pressed = ExtResource("11_rkjke")

[node name="Chart" type="TextureButton" parent="UI/ToolBar/HBox"]
visible = false
custom_minimum_size = Vector2(0, 118)
layout_mode = 2
theme = ExtResource("1_aam76")
toggle_mode = true
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_6br4g")
texture_normal = ExtResource("8_th8r4")
texture_pressed = ExtResource("9_7x72q")

[node name="My" type="TextureButton" parent="UI/ToolBar/HBox"]
custom_minimum_size = Vector2(0, 118)
layout_mode = 2
theme = ExtResource("1_aam76")
toggle_mode = true
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_6br4g")
texture_normal = ExtResource("9_yymeo")
texture_pressed = ExtResource("15_g8h5d")

[node name="Store" type="CanvasLayer" parent="UI"]
script = ExtResource("6_ddr0y")

[node name="Control" type="Control" parent="UI/Store"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 0.928
offset_bottom = -0.76001
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("1_aam76")

[node name="Panel" type="Panel" parent="UI/Store/Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.976
offset_bottom = -0.256104
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBox" type="VBoxContainer" parent="UI/Store/Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Center" type="CenterContainer" parent="UI/Store/Control/Panel/VBox"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UI/Store/Control/Panel/VBox/Center"]
layout_mode = 2
texture = ExtResource("17_ddfjo")

[node name="Title" parent="UI/Store/Control/Panel/VBox/Center/TextureRect" instance=ExtResource("17_xb6ny")]
layout_mode = 1
offset_left = -260.0
offset_right = 260.0
offset_bottom = 108.0

[node name="Center2" type="CenterContainer" parent="UI/Store/Control/Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="UI/Store/Control/Panel/VBox/Center2"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Store" type="NinePatchRect" parent="UI/Store/Control/Panel/VBox/Center2/VBox"]
custom_minimum_size = Vector2(1040, 1400)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("19_2x3k2")

[node name="VBox" type="VBoxContainer" parent="UI/Store/Control/Panel/VBox/Center2/VBox/Store"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -657.0
offset_right = 500.0
offset_bottom = 669.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 42

[node name="Title" type="VBoxContainer" parent="UI/Store/Control/Panel/VBox/Center2/VBox/Store/VBox"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Title" type="Label" parent="UI/Store/Control/Panel/VBox/Center2/VBox/Store/VBox/Title"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.886275, 0.698039, 1)
theme_override_fonts/font = ExtResource("20_2plv4")
theme_override_font_sizes/font_size = 40
text = "商店"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Center" type="CenterContainer" parent="UI/Store/Control/Panel/VBox/Center2/VBox/Store/VBox/Title"]
layout_mode = 2

[node name="Line" type="TextureRect" parent="UI/Store/Control/Panel/VBox/Center2/VBox/Store/VBox/Title/Center"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
texture = ExtResource("20_00yt8")
stretch_mode = 2

[node name="Scroll" type="ScrollContainer" parent="UI/Store/Control/Panel/VBox/Center2/VBox/Store/VBox"]
custom_minimum_size = Vector2(1000, 1060)
layout_mode = 2
size_flags_vertical = 3

[node name="Items" type="VBoxContainer" parent="UI/Store/Control/Panel/VBox/Center2/VBox/Store/VBox/Scroll"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Scroll2" type="ScrollContainer" parent="UI/Store/Control/Panel/VBox/Center2/VBox/Store/VBox"]
visible = false
custom_minimum_size = Vector2(1000, 1060)
layout_mode = 2

[node name="Skill" type="VBoxContainer" parent="UI/Store/Control/Panel/VBox/Center2/VBox/Store/VBox/Scroll2"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 20
alignment = 1

[node name="End" type="CenterContainer" parent="UI/Store/Control/Panel/VBox/Center2/VBox/Store/VBox"]
layout_mode = 2

[node name="Line" type="TextureRect" parent="UI/Store/Control/Panel/VBox/Center2/VBox/Store/VBox/End"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
texture = ExtResource("20_00yt8")
stretch_mode = 2

[node name="Bar" type="NinePatchRect" parent="UI/Store/Control/Panel/VBox/Center2/VBox"]
custom_minimum_size = Vector2(1040, 120)
layout_mode = 2
texture = ExtResource("20_a6xjj")
patch_margin_left = 20
patch_margin_top = 21
patch_margin_right = 20

[node name="HBox" type="HBoxContainer" parent="UI/Store/Control/Panel/VBox/Center2/VBox/Bar"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Item" type="Button" parent="UI/Store/Control/Panel/VBox/Center2/VBox/Bar/HBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 39
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_ffqeo")
text = "物品"

[node name="Skill" type="Button" parent="UI/Store/Control/Panel/VBox/Center2/VBox/Bar/HBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 39
toggle_mode = true
button_group = SubResource("ButtonGroup_ffqeo")
text = "升级"

[node name="Chart" type="CanvasLayer" parent="UI"]
visible = false
script = ExtResource("5_qev3x")

[node name="Control" type="Control" parent="UI/Chart"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 0.9
offset_bottom = -0.00012207
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_aam76")

[node name="Panel" type="Panel" parent="UI/Chart/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Scroll" type="ScrollContainer" parent="UI/Chart/Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Items" type="VBoxContainer" parent="UI/Chart/Control/Panel/Scroll"]
custom_minimum_size = Vector2(1080, 1728)
layout_mode = 2
alignment = 1

[node name="Coins" type="Label" parent="UI/Chart/Control/Panel/Scroll/Items"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "总金币量： 99999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Owned" type="Label" parent="UI/Chart/Control/Panel/Scroll/Items"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "购买的物品： 99999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="My" type="CanvasLayer" parent="UI"]
visible = false
script = ExtResource("19_g63aj")

[node name="Control" type="Control" parent="UI/My"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 0.9
offset_bottom = -0.00012207
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_aam76")

[node name="Panel" type="TextureRect" parent="UI/My/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 43.0
offset_top = 69.0
offset_right = -43.0
offset_bottom = -68.9999
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("19_2x3k2")

[node name="Title" type="VBoxContainer" parent="UI/My/Control/Panel"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.087
anchor_right = 0.5
anchor_bottom = 0.087
offset_left = -426.0
offset_top = -55.33
offset_right = 426.0
offset_bottom = 56.67
theme_override_constants/separation = 10
alignment = 1

[node name="Title" type="Label" parent="UI/My/Control/Panel/Title"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.886275, 0.698039, 1)
theme_override_fonts/font = ExtResource("20_2plv4")
theme_override_font_sizes/font_size = 40
text = "设置"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Center" type="CenterContainer" parent="UI/My/Control/Panel/Title"]
layout_mode = 2

[node name="Line" type="TextureRect" parent="UI/My/Control/Panel/Title/Center"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
texture = ExtResource("20_00yt8")
stretch_mode = 2

[node name="Margin" type="MarginContainer" parent="UI/My/Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 53.0
offset_top = 224.0
offset_right = -53.0
offset_bottom = -85.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="UI/My/Control/Panel/Margin"]
layout_mode = 2
theme_override_constants/separation = 82

[node name="Block" type="VBoxContainer" parent="UI/My/Control/Panel/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="UI/My/Control/Panel/Margin/VBox/Block"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.886275, 0.698039, 1)
theme_override_fonts/font = ExtResource("20_2plv4")
theme_override_font_sizes/font_size = 60
text = "其他"

[node name="HBox" type="HBoxContainer" parent="UI/My/Control/Panel/Margin/VBox/Block"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Del" type="Button" parent="UI/My/Control/Panel/Margin/VBox/Block/HBox"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 41
text = "删除存档"

[node name="Gift" type="Button" parent="UI/My/Control/Panel/Margin/VBox/Block/HBox"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 41
text = "兑换码"

[node name="Block2" type="VBoxContainer" parent="UI/My/Control/Panel/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="UI/My/Control/Panel/Margin/VBox/Block2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.886275, 0.698039, 1)
theme_override_fonts/font = ExtResource("20_2plv4")
theme_override_font_sizes/font_size = 60
text = "声音"

[node name="HBox" type="HBoxContainer" parent="UI/My/Control/Panel/Margin/VBox/Block2"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="Label" type="Label" parent="UI/My/Control/Panel/Margin/VBox/Block2/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.886275, 0.698039, 1)
theme_override_fonts/font = ExtResource("20_2plv4")
theme_override_font_sizes/font_size = 47
text = "音效"

[node name="HSlider" type="HSlider" parent="UI/My/Control/Panel/Margin/VBox/Block2/HBox"]
custom_minimum_size = Vector2(600, 50)
layout_mode = 2
max_value = 5.0
value = 5.0
tick_count = 5

[node name="Block3" type="VBoxContainer" parent="UI/My/Control/Panel/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="UI/My/Control/Panel/Margin/VBox/Block3"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.886275, 0.698039, 1)
theme_override_fonts/font = ExtResource("20_2plv4")
theme_override_font_sizes/font_size = 60
text = "关于"

[node name="VBox" type="VBoxContainer" parent="UI/My/Control/Panel/Margin/VBox/Block3"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="UI/My/Control/Panel/Margin/VBox/Block3/VBox"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="UI/My/Control/Panel/Margin/VBox/Block3/VBox/HBox"]
layout_mode = 2

[node name="Label2" type="Label" parent="UI/My/Control/Panel/Margin/VBox/Block3/VBox/HBox/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.886275, 0.698039, 1)
theme_override_fonts/font = ExtResource("20_2plv4")
theme_override_font_sizes/font_size = 47
text = "美术："

[node name="Label3" type="Label" parent="UI/My/Control/Panel/Margin/VBox/Block3/VBox/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.886275, 0.698039, 1)
theme_override_fonts/font = ExtResource("20_2plv4")
theme_override_font_sizes/font_size = 47
text = "Acid  Wall Studio
Stable Diffusion
Leonardo.Ai"

[node name="HBox2" type="HBoxContainer" parent="UI/My/Control/Panel/Margin/VBox/Block3/VBox"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="UI/My/Control/Panel/Margin/VBox/Block3/VBox/HBox2"]
layout_mode = 2

[node name="Label2" type="Label" parent="UI/My/Control/Panel/Margin/VBox/Block3/VBox/HBox2/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.886275, 0.698039, 1)
theme_override_fonts/font = ExtResource("20_2plv4")
theme_override_font_sizes/font_size = 47
text = "程序："

[node name="Label3" type="Label" parent="UI/My/Control/Panel/Margin/VBox/Block3/VBox/HBox2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.886275, 0.698039, 1)
theme_override_fonts/font = ExtResource("20_2plv4")
theme_override_font_sizes/font_size = 47
text = "Acid Wall Studio"

[node name="Timer" type="Timer" parent="."]

[node name="Background" type="CanvasLayer" parent="."]
layer = -128

[node name="Background" type="TextureRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -27.0
offset_top = -56.0
offset_right = 4837.0
offset_bottom = 6488.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.753, 0.753)
texture = ExtResource("23_pevqq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background/Background"]
autoplay = "Move"
libraries = {
"": SubResource("AnimationLibrary_mtlui")
}

[node name="Round" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationPlayer")
autoplay = "Round"
speed_scale = 3.0
libraries = {
"": SubResource("AnimationLibrary_wjohf")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fdc2b")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wg5m3")
autoplay = true
